fixed height of empty library message (needs check on Windows)

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -115,7 +115,7 @@
 
 #emptyLibrary {
   color: black;
-  height: calc(var(--size) - 80px - 4px);
+  height: calc(var(--size) - 80px + 3px);
   font-style: italic;
   padding: 40px 100px;
   margin: 8px;
