force line-breaks for long links in the attribution

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -539,6 +539,7 @@ div:nth-of-type(1) > .list > .roomState .star {
   height: unset;
   padding: 20px;
   overflow: auto;
+  overflow-wrap: break-word;
 }
 
 #helpTexts h3 {
