--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -288,7 +288,7 @@ button:hover {
   }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-aspect-ratio:1600/1000) and (max-width: 1100px) {
   .toolbarButton .tooltip {
     display: none;
     position: absolute;
