--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -529,6 +529,7 @@ div:nth-of-type(1) > .list > .roomState .star {
   padding: 0 20px;
   overflow: auto;
   overflow-wrap: break-word;
+  white-space: pre-line;
 }
 
 #helpTexts h3 {
