--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -33,39 +33,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-button {
-  border: 5px;
-  color: white;
-  background-color: var(--VTTblue);
-  padding: 5px;
-  border-radius: 5px;
-  background-repeat: no-repeat;
-  margin: 1px;
-}
-
-button:hover {
-  background-color: var(--VTTblueDark);
-}
-
-#toolbar {
-  background: var(--VTTblue);
-  height: var(--toolbarSize);
-  width: 100%;
-  position: fixed;
-
-  top: calc((calc(var(--vh, 1vh) * 100) - var(--roomHeight) * var(--scale)) / 2 + var(--roomHeight) * var(--scale) - var(--toolbarSize) / 2 - 1px);
-
-  left: 0;
-  width: 100%;
-  height: var(--toolbarSize);
-  z-index: 2;
-  display: flex;
-  align-content: center;
-  gap: 2px;
-  padding: 2px;
-  box-sizing: border-box;
-}
-
 #roomArea {
   position: fixed;
   overflow: hidden;
@@ -76,315 +43,11 @@ button:hover {
   z-index: 1;
 }
 
-#toolbar .divider {
-  border-left: 1px solid #ffffff44;
-  height: calc(var(--toolbarSize) - 14px);
-  max-width: 0px;
-  font-size: 0px;
-  flex-grow: 0;
-  flex-shrink: 0;
-  margin: 7px 3px;
-}
-
-#toolbar .spacer {
-  background: none;
-  font-size: 0px;
-  flex-grow: 1;
-}
-
-.toolbarButton {
-  flex-grow: 0;
-  flex-shrink: 0;
-  position: relative;
-  width: auto;
-  height: calc(var(--toolbarSize) - 4px);
-  margin: 0;
-  padding: 0;
-  border: 0;
-  border-radius: 4px;
-  background: none;
-  font-size: calc(var(--toolbarSize) - 12px);
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-size: 80% 80%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.toolbarButton::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(var(--toolbarSize) - 4px);
-  height: calc(var(--toolbarSize) - 4px);
-  font-size: calc(var(--toolbarSize) - 12px);
-  line-height: calc(var(--toolbarSize) - 4px);
-}
-
-.toolbarButton:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.toolbarButton:focus {
-  outline-style: none;
-  box-shadow: none;
-  border-color: transparent;
-}
-
-.toolbarButton.active {
-  background-color: white;
-  color: var(--VTTblue);
-}
-
-.toolbarButton .tooltip {
-  font-family: 'Roboto';
-  display: inline-block;
-  position: relative;
-  padding: 2px 8px 2px 2px;
-  margin-left: calc(var(--toolbarSize) - 4px);
-  font-size: 14px;
-  line-height: calc(var(--toolbarSize) - 4px);
-  color: white;
-  border-radius: 4px;
-  width: auto;
-  height: calc(var(--toolbarSize) - 4px);
-  white-space: nowrap;
-  pointer-events: none;
-  font-weight: 500;
-}
-
-.toolbarButton:hover .tooltip {
-  display: block !important;
-}
-
-.toolbarButton::before,
-.ui-button::before,
-.prettyButton::before,
-.prettyButton-icon,
-.symbols {
-  font-family: 'VTT-Symbols' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-
-  letter-spacing: 0;
-  -webkit-font-feature-settings: "liga";
-  -moz-font-feature-settings: "liga=1";
-  -moz-font-feature-settings: "liga";
-  -ms-font-feature-settings: "liga"1;
-  font-feature-settings: "liga";
-  -webkit-font-variant-ligatures: discretionary-ligatures;
-  font-variant-ligatures: discretionary-ligatures;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-#options {
-  left: 0px;
-  display: inline-flex;
-  padding: 2px;
-  border-radius: 4px;
-  top: -82px;
-  transform: translateY(45px) translateX(564px);
-  position: absolute;
-  background:var(--VTTblue);
-  box-shadow: 0 0 5px #00000055;
-}
-
-#volume {
-  top: 50%;
-  transform: translateY(50%);
-  -moz-transform: translateY(25%);
-}
-
 @media (min-aspect-ratio: 1600/1000) {
-  .toolbarButton {
-    width: calc(var(--toolbarSize) - 4px);
-  }
-
-  #toolbar {
-    top: 0;
-    left: calc((100vw - var(--roomWidth) * var(--scale)) / 2 - var(--toolbarSize) / 2 + 1px);
-    width: var(--toolbarSize);
-    height: 100%;
-    flex-direction: column;
-  }
-
-  #options {
-    transform: translateY(273px) translateX(46px);
-  }
-
-  #toolbar .divider{
-    border-top: 1px solid #ffffff44;
-    height: 0px;
-    max-height: 0px;
-    font-size: 0px;
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin: 3px 5px;
-    max-width: 75px;
-  }
-
-  body:not(.wideToolbar) .toolbarButton .tooltip {
-    display: none;
-    position: absolute;
-    padding: 2px 12px;
-    font-size: 14px;
-    line-height: 14px;
-    color: white;
-    background: var(--VTTblue);
-    border-radius: 4px;
-    width: auto;
-    height: auto;
-    box-shadow: 0 0 5px #00000055;
-    white-space: nowrap;
-    top: 10px;
-    right: unset;
-    left: 4px;
-    line-height: 14px;
-    min-height: 16px;
-  }
-
   body {
     --roomTop: 0px;
     --roomLeft: calc((100vw - var(--roomWidth) * var(--scale)) / 2 + var(--toolbarSize) / 2);
   }
-
-  .wideToolbar {
-    --toolbarSize: 200px;
-  }
-  .wideToolbar .toolbarButton {
-    height: 32px;
-    justify-content: left;
-    padding: 5px;
-  }
-  .wideToolbar .toolbarButton::before {
-    font-size: 32px;
-    line-height: 32px;
-    height: 32px;
-    width: 32px;
-  }
-  .wideToolbar #optionsButton {
-    background-position: 2px;
-  }
-  .wideToolbar #muteButton {
-    --toolbarSize: 44px;
-  }
-  .wideToolbar #options {
-    transform: translateY(243px) translateX(202px);
-  }
-  .wideToolbar .toolbarButton .tooltip {
-    margin-left: 32px;
-    line-height: unset;
-    height: unset;
-  }
-  .wideToolbar .active.toolbarButton .tooltip {
-    color: var(--VTTblue);
-  }
-  body.wideToolbar.lightsOff #toolbar .tooltip {
-    background-color: unset;
-  }
-  .wideToolbar #toolbar .divider {
-    max-width: 100%;
-  }
-}
-
-@media (min-aspect-ratio: 1600/1000) and (min-height: 440px) {
-  .wideToolbar #toolbar {
-    background-image: url(i/branding/logo.svg);
-    background-size: 160px;
-    background-repeat: no-repeat;
-    background-position: center 30px;
-    padding-top: 110px;
-  }
-  .wideToolbar #options {
-    transform: translateY(353px) translateX(202px);
-  }
-}
-
-@media only screen and (max-aspect-ratio:1600/1000) and (max-width: 1100px) {
-  .toolbarButton .tooltip {
-    display: none;
-    position: absolute;
-    padding: 2px 12px;
-    font-size: 14px;
-    line-height: 14px;
-    color: white;
-    background: var(--VTTblue);
-    border-radius: 4px;
-    width: auto;
-    height: auto;
-    box-shadow: 0 0 5px #00000055;
-    white-space: nowrap;
-    bottom: calc(var(--toolbarSize) + 4px);
-    right: unset;
-    left: 4px;
-    line-height: 14px;
-    min-height: 16px;
-    left: 0;
-    margin: 0;
-  }
-
-  #aboutButton > .tooltip{
-    left: unset;
-    right: 0;
-  }
-
-  .toolbarButton {
-    width: calc(var(--toolbarSize) - 4px);
-  }
-
-  #options {
-    transform: translateY(44px) translateX(188px);
-    background:var(--VTTblue);
-  }
-}
-
-body.aspectTooGood #toolbar {
-  top: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
-  left: calc((100vw - var(--roomWidth) * var(--scale)) / 2 - var(--toolbarSize) / 2 + 1px);
-  width: var(--toolbarSize);
-  height: calc(var(--scale) * var(--roomHeight));
-  flex-direction: column;
-}
-
-body.aspectTooGood .toolbarButton .tooltip {
-  display: none;
-  position: absolute;
-  padding: 2px 12px;
-  font-size: 14px;
-  line-height: 14px;
-  color: white;
-  background: var(--VTTblue);
-  border-radius: 4px;
-  width: auto;
-  height: auto;
-  box-shadow: 0 0 5px #00000055;
-  white-space: nowrap;
-  top: 10px;
-  right: unset;
-  left: 4px;
-  line-height: 14px;
-  min-height: 16px;
-  margin-left: 40px;
-}
-
-body.aspectTooGood .toolbarButton:hover .tooltip {
-  display: block;
-}
-
-body.aspectTooGood #toolbar .divider {
-  border-top: 1px solid #ffffff44;
-  height: 0px;
-  max-height: 0px;
-  font-size: 0px;
-  flex-grow: 0;
-  flex-shrink: 0;
-  margin: 3px 5px;
-  max-width: 75px;
 }
 
 body.aspectTooGood {
@@ -392,36 +55,380 @@ body.aspectTooGood {
   --roomLeft: var(--toolbarSize);
 }
 
-body #hideToolbarButton,
-body.aspectTooGood.hiddenToolbar #toolbar {
-  display: none;
-}
-
 body.aspectTooGood.hiddenToolbar {
   --roomLeft: calc((100vw - var(--scale) * var(--roomWidth)) / 2);
 }
 
-body.aspectTooGood #hideToolbarButton {
-  display: inline-flex;
-}
 
-body.aspectTooGood #options {
-  transform: translateY(273px) translateX(46px);
-}
+/* toolbar */
 
-body.lightsOff, body.lightsOff #toolbar, body.lightsOff #toolbar .tooltip {
-  background-color: black;
-}
-body.lightsOff #toolbar {
-  opacity: 0.1;
-}
-body.lightsOff #toolbar:hover {
-  opacity: 1;
-}
 
-#options.hidden {
-  visibility: hidden;
-}
+  /* main */
+
+    #toolbar {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      position: fixed;
+      box-sizing: border-box;
+      z-index: 2;
+
+      top: 0;
+      left: calc((100vw - var(--roomWidth) * var(--scale)) / 2 - var(--toolbarSize) / 2 + 1px);
+      width: var(--toolbarSize);
+      height: 100%;
+
+      background: var(--VTTblue);
+      padding: 20px 0 10px 0;
+    }
+
+    body.wideToolbar {
+      --toolbarSize: 200px;
+    }
+
+    body.aspectTooGood #toolbar {
+      top: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
+      height: calc(var(--scale) * var(--roomHeight));
+    }
+
+    body.horizontalToolbar #toolbar {
+      flex-direction: row;
+
+      top: calc((var(--vh, 1vh) * 100 - var(--roomHeight) * var(--scale)) / 2 + var(--roomHeight) * var(--scale) - var(--toolbarSize) / 2 - 1px);
+      left: 0;
+      width: 100%;
+      height: var(--toolbarSize);
+
+      padding: 0 10px 0 20px;
+    }
+
+    body.aspectTooGood.hiddenToolbar #toolbar {
+      display: none;
+    }
+
+    @media (min-height: 440px) {
+      body.wideToolbar #toolbar {
+        background-image: url(i/branding/logo.svg);
+        background-size: 160px;
+        background-repeat: no-repeat;
+        background-position: center 30px;
+        padding-top: 84px;
+      }
+      body.wideToolbar #toolbar .divider:first-child {
+        display: block;
+        margin: 20px 10%;
+      }
+    }
+
+  /* dividers */
+
+    #toolbar .divider {
+      border-top: 1px solid #fff8;
+      margin: 10px 10%;
+    }
+
+    #toolbar .divider:first-child {
+      display: none;
+    }
+
+    #toolbar .spacer {
+      flex-grow: 1;
+    }
+
+    body.horizontalToolbar #toolbar .divider {
+      border-left: 1px solid #fff8;
+      height: 80%;
+      margin: auto 10px;
+    }
+
+  /* buttons */
+
+    .toolbarButton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 2px;
+    }
+
+    .toolbarButton::before,
+    .ui-button::before,
+    .prettyButton::before,
+    .prettyButton-icon,
+    .symbols {
+      font-family: 'VTT-Symbols' !important;
+
+      letter-spacing: 0;
+      font-feature-settings: "liga";
+      font-variant-ligatures: discretionary-ligatures;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    .toolbarButton::before {
+      font-size: 20px;
+    }
+
+    .toolbarButton:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .toolbarButton:focus {
+      outline-style: none;
+      box-shadow: none;
+      border-color: transparent;
+    }
+
+    body.wideToolbar .toolbarButton {
+      justify-content: left;
+      padding-left: 10%;
+    }
+
+    body.horizontalToolbar .toolbarButton:not(.toolbarTab) {
+      justify-content: right;
+    }
+
+  /* tabs */
+
+    .toolbarTab {
+      width: 90%;
+      border-radius: 0 20px 20px 0;
+      margin-left: 0;
+      height: 40px;
+    }
+
+    .toolbarTab::before {
+      font-size: 32px;
+    }
+
+    .toolbarTab.active {
+      background-color: white;
+      color: var(--VTTblue);
+    }
+
+    body.wideToolbar .toolbarTab::before {
+      font-size: 24px;
+    }
+
+    body.horizontalToolbar .toolbarTab {
+      border-radius: 20px 20px 0 0;
+      margin: auto 2px 0 2px;
+      max-width: 180px;
+    }
+
+  /* button tooltips */
+
+    .toolbarButton .tooltip, #options {
+      display: none;
+      position: absolute;
+      left: 46px;
+      padding: 2px 12px;
+      font-size: 14px;
+      border-radius: 4px;
+      white-space: nowrap;
+      color: #fff;
+      background: var(--VTTblue);
+      box-shadow: 0 0 5px #0005;
+    }
+
+    .toolbarButton:hover .tooltip, body.wideToolbar .toolbarButton .tooltip {
+      display: block;
+    }
+
+    body.wideToolbar .toolbarButton .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
+      box-shadow: unset;
+      background: none;
+    }
+
+    body.wideToolbar .toolbarButton .tooltip {
+      margin-left: -4px;
+      font-size: 12px;
+    }
+
+    body.wideToolbar .toolbarTab .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
+      font-size: 20px;
+    }
+
+    body.wideToolbar .active.toolbarTab .tooltip, body.horizontalToolbar .active.toolbarTab .tooltip {
+      color: var(--VTTblue);
+    }
+
+    body.horizontalToolbar .toolbarButton .tooltip {
+      left: unset;
+      bottom: 46px;
+    }
+
+    body.horizontalToolbar .toolbarTab .tooltip {
+      display: block;
+      position: static;
+      padding-right: 0;
+    }
+
+  /* button specific styles */
+
+    #activeGameButton::before {
+      content: '[play_arrow]';
+    }
+
+    #statesButton::before {
+      content: '[library]';
+    }
+
+    #playersButton::before {
+      content: '[users_settings]';
+    }
+
+    #editButton::before {
+      content: '[edit_mode]';
+    }
+
+    #addButton::before {
+      content: '[widget_add]';
+    }
+
+    #optionsButton::before {
+      content: '[volume_up]';
+    }
+
+    html:not(:fullscreen) #fullscreenButton::before {
+      content: '[enter_fullscreen]';
+    }
+
+    html:fullscreen #fullscreenButton::before {
+      content: '[exit_fullscreen]';
+    }
+
+    html:not(:fullscreen) #fullscreenButton .tooltip::before {
+      content: '';
+    }
+
+    html:fullscreen #fullscreenButton .tooltip::before {
+      content: 'Exit ';
+    }
+
+    html:not(:-webkit-full-screen) #fullscreenButton::before {
+      content: '[enter_fullscreen]';
+    }
+
+    html:-webkit-full-screen #fullscreenButton::before {
+      content: '[exit_fullscreen]';
+    }
+
+    html:not(:-webkit-full-screen) #fullscreenButton .tooltip::before {
+      content: '';
+    }
+
+    html:-webkit-full-screen #fullscreenButton .tooltip::before {
+      content: 'Exit ';
+    }
+
+    #lightsButton::before {
+      content: '[auto_awesome]';
+    }
+
+    #hideToolbarButton::before {
+      content: '[hide_side_bar]';
+    }
+
+    #aboutButton::before {
+      content: '[vtt_logo]';
+    }
+
+    body:not(.aspectTooGood) #hideToolbarButton {
+      display: none;
+    }
+
+    @media (max-height: 510px) {
+      body.wideToolbar #editButton, body.wideToolbar #addButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 500px) {
+      body:not(.wideToolbar,.horizontalToolbar) #editButton, body:not(.wideToolbar,.horizontalToolbar) #addButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 340px) {
+      body:not(.horizontalToolbar) .divider, body:not(.horizontalToolbar) #optionsButton, body:not(.horizontalToolbar) #lightsButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 240px) {
+      body:not(.horizontalToolbar) #aboutButton {
+        display: none;
+      }
+    }
+
+    @media (max-height: 200px) {
+      body:not(.horizontalToolbar) #playersButton {
+        display: none;
+      }
+    }
+
+    @media (max-width: 910px) {
+      body.horizontalToolbar #editButton, body.horizontalToolbar #addButton {
+        display: none;
+      }
+    }
+
+  /* sound settings */
+
+    #optionsAnchor {
+      position: relative;
+    }
+
+    #options {
+      display: flex;
+      left: calc(var(--toolbarSize) + 4px);
+      top: -2px;
+      padding: 2px;
+    }
+
+    #options.hidden {
+      display: none;
+    }
+
+    #muteButton {
+      padding: 5px;
+    }
+
+    #muteButton::before {
+      content: '[volume_up]';
+    }
+
+    #muteButton.muted::before {
+      content: '[volume_off]';
+    }
+
+    body.horizontalToolbar #options {
+      top: -42px;
+      left: unset;
+      right: -32px;
+    }
+
+  /* lights off */
+
+    body.lightsOff, body.lightsOff #toolbar, body.lightsOff .toolbarButton:not(.active), body.lightsOff .toolbarButton:not(.active) .tooltip, body.lightsOff:not(.wideToolbar,.horizontalToolbar) .toolbarButton .tooltip, body.lightsOff #options {
+      background-color: black;
+    }
+
+    body.lightsOff #toolbar {
+      opacity: 0.1;
+    }
+
+    body.lightsOff #toolbar:hover {
+      opacity: 1;
+    }
+
+    body.lightsOff .toolbarTab.active, body.lightsOff.wideToolbar .active.toolbarButton .tooltip, body.lightsOff.horizontalToolbar .active.toolbarButton .tooltip {
+      color: black;
+    }
+
+
+/* misc */
+
 
 .overlay {
   color: var(--VTTblue);
@@ -538,87 +545,21 @@ body.lightsOff #toolbar:hover {
   visibility: hidden;
 }
 
-#statesButton::before {
-  content: '[library]';
-}
-
-#statesButton .tooltip {
-  font-weight: 900;
-}
-
-#playersButton::before {
-  content: '[users_settings]';
-}
-
-#editButton::before {
-  content: '[edit_mode]';
-}
-
-#addButton::before {
-  content: '[widget_add]';
-}
-
-html:not(:fullscreen) #fullscreenButton::before {
-  content: '[enter_fullscreen]';
-}
-
-html:fullscreen #fullscreenButton::before {
-  content: '[exit_fullscreen]';
-}
-
-html:not(:fullscreen) #fullscreenButton .tooltip::before {
-  content: '';
-}
-
-html:fullscreen #fullscreenButton .tooltip::before {
-  content: 'Exit ';
-}
-
-html:not(:-webkit-full-screen) #fullscreenButton::before {
-  content: '[enter_fullscreen]';
-}
-
-html:-webkit-full-screen #fullscreenButton::before {
-  content: '[exit_fullscreen]';
-}
-
-html:not(:-webkit-full-screen) #fullscreenButton .tooltip::before {
-  content: '';
-}
-
-html:-webkit-full-screen #fullscreenButton .tooltip::before {
-  content: 'Exit ';
-}
-
-#lightsButton::before {
-  content: '[auto_awesome]';
-}
-
-#hideToolbarButton::before {
-  content: '[hide_side_bar]';
-}
-
-#aboutButton::before {
-  content: '[vtt_logo]';
-}
-
-#optionsButton {
-  background-size: 28px 28px;
-  background-position: 6px 6px;
-  background-image:url(i/icons-white/mute-svg.svg);
-}
-
-#muteButton {
-  background-image:url(i/icons-white/mute-svg.svg);
-  width: calc(var(--toolbarSize) - 12px);
-  height: calc(var(--toolbarSize) - 12px);
-}
-
-#muteButton.toolbarButton.muted {
-  background-image:url(i/icons-white/unmute-svg.svg);
-}
-
 /*Buttons css*/
+
+button {
+  border: 5px;
+  color: white;
+  background-color: var(--VTTblue);
+  padding: 5px;
+  border-radius: 5px;
+  background-repeat: no-repeat;
+  margin: 1px;
+}
+
+button:hover {
+  background-color: var(--VTTblueDark);
+}
 
 button[icon] {
   display: flex;
