--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -205,7 +205,7 @@ body.aspectTooGood.hiddenToolbar {
       color: var(--VTTblue);
     }
 
-    body.wideToolbar .toolbarTab::before, body.horizontalToolbar .toolbarTab::before {
+    body.wideToolbar .toolbarTab::before {
       font-size: 24px;
     }
 
@@ -214,6 +214,12 @@ body.aspectTooGood.hiddenToolbar {
       margin: auto 2px 0 2px;
       padding: 0 16px;
       width: unset;
+    }
+
+    @media (min-width: 760px) {
+      body.horizontalToolbar .toolbarTab::before {
+        font-size: 24px;
+      }
     }
 
   /* button tooltips */
@@ -236,21 +242,21 @@ body.aspectTooGood.hiddenToolbar {
       display: block;
     }
 
-    body.wideToolbar .toolbarButton .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
+    body.wideToolbar .toolbarButton .tooltip {
       box-shadow: unset;
       background: none;
     }
 
-    body.wideToolbar .toolbarButton .tooltip, body.horizontalToolbar .toolbarButton .tooltip {
+    body.wideToolbar .toolbarButton .tooltip {
       margin-left: -4px;
       font-size: 12px;
     }
 
-    body.wideToolbar .toolbarTab .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
+    body.wideToolbar .toolbarTab .tooltip {
       font-size: 20px;
     }
 
-    body.wideToolbar .active.toolbarTab .tooltip, body.horizontalToolbar .active.toolbarTab .tooltip {
+    body.wideToolbar .active.toolbarTab .tooltip {
       color: var(--VTTblue);
     }
 
@@ -259,10 +265,30 @@ body.aspectTooGood.hiddenToolbar {
       bottom: 46px;
     }
 
-    body.horizontalToolbar .toolbarTab .tooltip {
-      display: block;
-      position: static;
-      padding-right: 0;
+    @media (min-width: 760px) {
+      body.horizontalToolbar .toolbarTab .tooltip {
+        box-shadow: unset;
+        background: none;
+      }
+
+      body.horizontalToolbar .toolbarButton .tooltip {
+        margin-left: -4px;
+        font-size: 12px;
+      }
+
+      body.horizontalToolbar .toolbarTab .tooltip {
+        font-size: 20px;
+      }
+
+      body.horizontalToolbar .active.toolbarTab .tooltip {
+        color: var(--VTTblue);
+      }
+
+      body.horizontalToolbar .toolbarTab .tooltip {
+        display: block;
+        position: static;
+        padding-right: 0;
+      }
     }
 
   /* button specific styles */
