--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -60,14 +60,14 @@ body.aspectTooGood.hiddenToolbar {
 }
 
 @media (orientation: portrait) {
-  body {
+  body:not(.lightsOff) {
     background-image: linear-gradient(0deg, #484848e8, #484848e8), url(i/branding/logo.svg);
     background-size: calc(100% - 40px) calc(var(--roomTop) - 40px);
     background-repeat: no-repeat;
     background-position: 20px 20px;
     height: 100vh;
   }
-  body::after {
+  body:not(.lightsOff)::after {
     position: absolute;
     display: flex;
     align-items: center;
