Fix color on Search Room label.

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -196,6 +196,7 @@ li, .jeNestedTree {
 i.key     { color: yellow;  }
 i.custom  { color: orange;  }
 i.extern  { color: red;     }
+.extern   { color: red;     }
 i.string  { color: #7ed07e; }
 i.number  { color: #dda0dd; }
 i.null    { color: blue;    }
