use Material Icons for JSON editor toolbar icons if the icon name is not in brackets

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -281,6 +281,9 @@ body.jsonEdit.jeZoomOut #topSurface {
   color: white;
   font-family: 'VTT-Symbols';
 }
+[id=jeTopButtons] button.material {
+  font-family: 'Material Icons';
+}
 
 #jeTopButtons button:disabled {
   background: gray;
