hide variant edit buttons behind a toggle; make them work; colorize a button or two

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -696,6 +696,12 @@ button[icon]:empty {
 button[icon]:empty::before {
   margin: 0;
 }
+button[icon].red {
+  background-color: darkred;
+}
+button[icon].green {
+  background-color: darkgreen;
+}
 
 .prettyButton {
   border: 5px;
