--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -554,7 +554,7 @@ div:nth-of-type(1) > .list > .roomState .star {
   width: 100%;
 }
 
-@media (min-width: 1001px) and (min-height: 626px) {
+@media not all and (max-width: 957px), not all and (max-height: 600px), not all and (max-width: 1000px) and (max-height: 643px) {
   #stateDetailsOverlay #helpTexts, #stateDetailsOverlay #similarDetails {
     display: block !important;
   }
