fix conflicting class `active`

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -137,12 +137,12 @@ li, .jeNestedTree {
 }
 
 /* Hide the nested list */
-.nested {
+.jeNestedTree.nested {
   display: none;
 }
 
 /* Show the nested list when the user clicks on the caret/arrow (with JavaScript) */
-.active {
+.jeNestedTree.active {
   display: block;
 }
 
