--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -419,7 +419,9 @@ body.jsonEdit.jeZoomOut #topSurface {
   text-shadow: 0px 1px 2px rgb(9, 12, 51);
   color: white;
   font-family: 'VTT-Symbols';
+  vertical-align: top;
 }
+
 [id=jeTopButtons] button.material {
   font-family: 'Material Icons';
 }
